--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,6 @@ Data Gathering/DATASET/valid/*
 Data Gathering/DATASET/eval/*
 Data Gathering/DATASET/train/*
 *.mp4
+log*
+*.pyc
+VLPT/lib/__pycache__/util.cpython-39.pyc
